# repoprompt

./: .gitignore  README.md  pyproject.toml
src/repoprompt/: __main__.py  repoprompt.py
tests/: test_repoprompt.py
